test/errors/ivar2.ds

#OUTPUT
#Syntax Error: Expected assignment operator.
# -> [13] int x 10
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    int x 10
    return 0
end

